test/functions/bradc/intents-error.good
intents-error.chpl:25: In function '_assignplus10':
intents-error.chpl:25: error: Assigning to a constant expression
